Vertical video height fix on tablet - desktop

--- a/public/css/project.css
+++ b/public/css/project.css
@@ -81,6 +81,11 @@
 	max-width: 1650px;
 }
 
+.project-video-vert
+{
+	max-width: 30%;
+}
+
 .project-video:last-of-type
 {
 	padding-bottom: 0;
@@ -323,6 +328,11 @@
 		height: 0;
 		visibility: hidden;		
 	}
+
+	.project-video-vert
+	{
+		max-width: 90%;
+	}
 }
 
 /* PHABLET */
@@ -348,6 +358,11 @@
 	.weblink-exit p
 	{
 		font-size: 25px;
+	}
+
+	.project-video-vert
+	{
+		max-width: 60%;
 	}
 }
 
@@ -386,6 +401,11 @@
 	{
 		font-size: 30px;
 	}
+
+	.project-video-vert
+	{
+		max-width: 30%;
+	}
 }
 
 /* DESKTOP */
@@ -411,5 +431,10 @@
 	.weblink-exit p
 	{
 		font-size: 30px;
+	}
+
+	.project-video-vert
+	{
+		max-width: 30%;
 	}
 }
